Bug 506912 - The Transaction autofill window is taking a long time to show up
Summary: The Transaction autofill window is taking a long time to show up
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: ux-ui (other bugs)
Version First Reported In: 5.2.0
Platform: Microsoft Windows Other
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-11 14:05 UTC by Adilson Urso
Modified: 2025-07-13 07:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Adilson Urso 2025-07-11 14:05:38 UTC
SUMMARY
The autofill window is taking about 10 seconds to load (5.2), but in the 5.1 was instantly.
I compared the same file for boths versions.


STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 11
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
In linux too
Comment 1 Thomas Baumgart 2025-07-13 06:31:28 UTC
Git commit 854e161875fb5bb6cc88b68e1e6e14f5a4a2329d by Thomas Baumgart.
Committed on 13/07/2025 at 06:30.
Pushed by tbaumgart into branch 'master'.

Improve response time to show autofill dialog
FIXED-IN: 5.2.1

M  +6    -0    kmymoney/views/ktransactionselectdlg.cpp
M  +2    -0    kmymoney/views/ktransactionselectdlg.h
M  +12   -8    kmymoney/views/newtransactioneditor.cpp

https://invent.kde.org/office/kmymoney/-/commit/854e161875fb5bb6cc88b68e1e6e14f5a4a2329d
Comment 2 Thomas Baumgart 2025-07-13 06:31:36 UTC
Git commit c2647de26a9721417360cc1547bcb72950d255dc by Thomas Baumgart.
Committed on 13/07/2025 at 06:30.
Pushed by tbaumgart into branch 'master'.

Allow double-click when selecting a transaction in autofill dialog

When double-clicking a transaction in the autofill dialog it was tried
to open the transaction editor. This change now selects the transaction
and fills the data into the calling transaction editor and closes the
dialog.
FIXED-IN: 5.2.1

M  +14   -0    kmymoney/views/ktransactionselectdlg.cpp
M  +2    -0    kmymoney/views/ktransactionselectdlg.h

https://invent.kde.org/office/kmymoney/-/commit/c2647de26a9721417360cc1547bcb72950d255dc
Comment 3 Thomas Baumgart 2025-07-13 07:28:58 UTC
Git commit 038c36017171df52ad79565e552bff2b46aadb92 by Thomas Baumgart.
Committed on 13/07/2025 at 06:34.
Pushed by tbaumgart into branch '5.2'.

Improve response time to show autofill dialog
FIXED-IN: 5.2.1
(cherry picked from commit 854e161875fb5bb6cc88b68e1e6e14f5a4a2329d)

M  +6    -0    kmymoney/views/ktransactionselectdlg.cpp
M  +2    -0    kmymoney/views/ktransactionselectdlg.h
M  +12   -8    kmymoney/views/newtransactioneditor.cpp

https://invent.kde.org/office/kmymoney/-/commit/038c36017171df52ad79565e552bff2b46aadb92
Comment 4 Thomas Baumgart 2025-07-13 07:29:06 UTC
Git commit b2ea8389434b28eb118d5e80804f91c8f4d1da50 by Thomas Baumgart.
Committed on 13/07/2025 at 06:34.
Pushed by tbaumgart into branch '5.2'.

Allow double-click when selecting a transaction in autofill dialog

When double-clicking a transaction in the autofill dialog it was tried
to open the transaction editor. This change now selects the transaction
and fills the data into the calling transaction editor and closes the
dialog.
FIXED-IN: 5.2.1
(cherry picked from commit c2647de26a9721417360cc1547bcb72950d255dc)

M  +14   -0    kmymoney/views/ktransactionselectdlg.cpp
M  +2    -0    kmymoney/views/ktransactionselectdlg.h

https://invent.kde.org/office/kmymoney/-/commit/b2ea8389434b28eb118d5e80804f91c8f4d1da50