Improve response time to show autofill dialog

BUG: 506912
FIXED-IN: 5.2.1